# athena

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt
src/athena/: currency.py  portfolio.py  pricingdata.py
src/athena/agents/: agents.py
src/athena/agents/templates/: system_prompt_commodities_short_ok.j2
src/athena/cli/: dashboard.py  demo.py  main.py  metrics.py  report.py
src/athena/dashboard/: generator.py
src/athena/dashboard/templates/: dashboard.html
src/athena/metrics/: __init__.py
tests/: test_currency.py  test_portfolio.py  test_pricingdata.py
